# REDACTED

./: .gitignore  Cargo.toml  client.ts  common.ts  deploy_commands.ts  index.ts  package-lock.json  package.json  server.ts  servers.ts
commands/: command.ts  command_base.ts  deploy_commands.ts  load_commands.ts
commands/serious_interaction/: fetchsuggestions.ts  help.ts  lfg.ts  ping.ts
commands/utility/: add.ts
configs/: bot_config.json
migrations/: 20240629214051_create_reaction_roles_table.up.sql  20240707230810_create_family_table.up.sql  20240708230225_create_gold_star_table.up.sql  20241018000644_create_lfg_posts_table.up.sql  20241019200941_create_voice_channels_table.up.sql  20241024011327_create_timezones_table.down.sql  20241024011327_create_timezones_table.up.sql
models/: server.ts
self_updating/: customRoles.ts
special_commands/: questionMe.ts
src/: client.rs  error.rs  main.rs  sqlx_lib.rs
src/handler/: interaction_autocomplete.rs  interaction_command.rs  interaction_component.rs  interaction_modal.rs  mod.rs  reaction_add.rs  reaction_remove.rs  ready.rs  voice_state_update.rs
src/handler/interaction/: autocomplete.rs  command.rs  component.rs  mod.rs  modal.rs
src/modules/: mod.rs
src/modules/destiny2/: column.rs  mod.rs  perk.rs  priority.rs  role.rs  shoppinglist.rs  source.rs  tierlist.rs  weapon.rs  weapon_name.rs  weapons.rs
src/modules/destiny2/dimwishlist/: bungie_api.rs  mod.rs  weapon.rs  wishlist.rs
src/modules/destiny2/endgame_analysis/: mod.rs  weapon.rs
src/modules/destiny2/lfg/: mod.rs  slash_command.rs
src/modules/destiny2/manifests/: mod.rs
src/modules/family/: components.rs  mod.rs  slash_commands.rs
src/modules/gold_star/: mod.rs  slash_commands.rs
src/modules/lfg/: components.rs  mod.rs  modal.rs  slash_command.rs
src/modules/nsfw/: boobs.rs  mod.rs
src/modules/reaction_roles/: message.rs  mod.rs  reaction.rs  slash_command.rs
src/modules/temp_voice/: events.rs  mod.rs  slash_command.rs
