[package]
name = "redacted"
version = "0.1.0"
edition = "2021"

[dependencies]
zayden-core = { git = "https://github.com/zayden-bot/slash-command-core.git", branch = "master" }
family = { git = "https://github.com/zayden-bot/family.git", branch = "master" }
gold-star = { git = "https://github.com/zayden-bot/gold-star.git", branch = "main" }
lfg = { git = "https://github.com/zayden-bot/lfg.git", branch = "main" }
reaction-roles = { git = "https://github.com/zayden-bot/reaction-roles.git", branch = "main" }
temp-voice = { git = "https://github.com/zayden-bot/temp-voice.git", branch = "master" }
async-trait = { version = "*", default-features = false }
dotenvy = { version = "*", default-features = false }
sqlx = { version = "*", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
tokio = { version = "*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
futures = { version = "*", default-features = false }
charming = { version = "*", default-features = false, features = ["ssr"] }
chrono = { version = "*", default-features = false }
chrono-tz = { version = "*", default-features = false }

# walkdir = "*"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
# version = "*"
default-features = false
features = [
    "builder",
    "client",
    "collector",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
]

[profile.release]
opt-level = 3
panic = "abort"
strip = true
codegen-units = 1
lto = "fat"
