[package]
name = "redacted"
version = "0.1.0"
edition = "2021"

[dependencies]
zayden-core = { git = "https://github.com/zayden-bot/slash-command-core.git", branch = "master" }
gold-star = { git = "https://github.com/zayden-bot/gold-star.git", branch = "main" }
lfg = { git = "https://github.com/zayden-bot/lfg.git", branch = "main" }
reaction-roles = { git = "https://github.com/zayden-bot/reaction-roles.git", branch = "main" }
temp-voice = { git = "https://github.com/zayden-bot/temp-voice.git", branch = "main" }
bungie-api = { git = "https://github.com/ViridianLink/bungie-api.git", branch = "main" }
google-sheets-api = { git = "https://github.com/ViridianLink/google-sheets-api.git", branch = "main" }
async-trait = { version = "*", default-features = false }
dotenvy = { version = "*", default-features = false }
sqlx = { version = "*", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
tokio = { version = "*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
futures = { version = "*", default-features = false }
chrono = { version = "*", default-features = false }
chrono-tz = { version = "*", default-features = false }
serde = { version = "*", default-features = false, features = ["derive"] }
serde_json = { version = "*", default-features = false }

[dependencies.serenity]
version = "*"
default-features = false
features = [
    "builder",
    "client",
    "collector",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
]

[profile.release]
opt-level = 3
panic = "abort"
strip = true
codegen-units = 1
lto = "fat"
